tests/tests/snapshots/test__typescript__inline-serde.snap
---
source: tests/tests/typescript.rs
assertion_line: 699
expression: output
---
i8: number
i16: number
i32: number
u8: number
u16: number
u32: number
f32: number
f64: number
bool: boolean
char: string
Range<i32>: {
	start: number,
	end: number,
}
RangeInclusive<i32>: {
	start: number,
	end: number,
}
(): null
(String, i32): [string, number]
(String, i32, bool): [string, number, boolean]
((String, i32), (bool, char, bool), ()): [[string, number], [boolean, string, boolean], null]
(bool, bool, bool, bool, bool, bool, bool, bool, bool, bool, bool, bool): [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean]
(Vec<i32>, Vec<bool>): [number[], boolean[]]
String: string
PathBuf: string
IpAddr: string
Ipv4Addr: string
Ipv6Addr: string
SocketAddr: string
SocketAddrV4: string
SocketAddrV6: string
Cow<'static, str>: string
Cow<'static, i32>: number
&'static str: string
&'static bool: boolean
&'static i32: number
Vec<i32>: number[]
&'static [i32]: number[]
&'static [i32; 3]: [number, number, number]
[i32; 3]: [number, number, number]
Vec<MyEnum>: MyEnum[]
&'static [MyEnum]: MyEnum[]
&'static [MyEnum; 6]: [MyEnum, MyEnum, MyEnum, MyEnum, MyEnum, MyEnum]
[MyEnum; 2]: [MyEnum, MyEnum]
&'static [i32; 1]: [number]
&'static [i32; 0]: []
Option<i32>: number | null
Option<()>: null
Option<Vec<i32>>: number[] | null
Result<String, i32>: ({ Ok: string }) & { Err?: never } | ({ Err: number }) & { Ok?: never }
Vec<Option<Cow<'static, i32>>>: (number | null)[]
Option<Vec<Cow<'static, i32>>>: number[] | null
[Vec<String>; 3]: [string[], string[], string[]]
Option<Option<String>>: string | null
Option<Option<Option<String>>>: string | null
PhantomData<()>: null
PhantomData<String>: null
Infallible: never
Unit1: null
Unit2: Record<string, never>
Unit3: []
Unit4: null
Unit5: "A"
Unit6: { A: null }
Unit7: { A: Record<string, never> }
SimpleStruct: {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
}
TupleStruct1: number
TupleStruct3: [number, boolean, string]
TestEnum: "Unit" | ({ Single: number }) & { Multiple?: never; Struct?: never } | ({ Multiple: [number, number] }) & { Single?: never; Struct?: never } | ({ Struct: {
	a: number,
} }) & { Multiple?: never; Single?: never }
RefStruct: TestEnum
InlinerStruct: {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
}
GenericStruct<i32>: {
	arg: number,
}
GenericStruct<String>: {
	arg: string,
}
FlattenEnumStruct: {
	outer: string,
} & (FlattenEnum)
OverridenStruct: {
	overriden_field: string,
}
HasGenericAlias: { [key in number]: string }
EnumMacroAttributes: ({ A: string }) & { D?: never; bbb?: never; cccc?: never } | ({ bbb: number }) & { A?: never; D?: never; cccc?: never } | ({ cccc: number }) & { A?: never; D?: never; bbb?: never } | ({ D: {
	a: string,
	bbbbbb: number,
} }) & { A?: never; bbb?: never; cccc?: never }
InlineEnumField: { A: {
	a: string,
} }
InlineOptionalType: {
	optional_field: {
		a: string,
	} | null,
}
Rename: "OneWord" | "Two words"
TransparentType: TransparentTypeInner
TransparentType2: null
TransparentTypeWithOverride: string
[Option<u8>; 3]: [(number | null), (number | null), (number | null)]
HashMap<BasicEnum, ()>: Partial<{ [key in BasicEnum]: null }>
HashMap<BasicEnum, i32>: Partial<{ [key in BasicEnum]: number }>
Option<Option<Option<Option<i32>>>>: number | null
Vec<PlaceholderInnerField>: PlaceholderInnerField[]
EnumReferenceRecordKey: {
	a: Partial<{ [key in BasicEnum]: number }>,
}
FlattenOnNestedEnum: {
	id: string,
} & (NestedEnum)
MyEmptyInput: Record<string, never>
(String): string
(String,): [string]
ExtraBracketsInTupleVariant: { A: string }
ExtraBracketsInUnnamedStruct: string
Vec<MyEnum>: MyEnum[]
InlineTuple: {
	demo: [string, boolean],
}
InlineTuple2: {
	demo: [{
		demo: [string, boolean],
	}, boolean],
}
Box<str>: string
Box<String>: string
SkippedFieldWithinVariant: { type: "A" } | { type: "B"; data: string }
KebabCase: {
	"test-ing": string,
}
&[&str]: string[]
Issue281<'_>: {
	default_unity_arguments: string[],
}
LifetimeGenericStruct<'_, i32>: {
	borrowed: number[],
	owned: number[],
}
LifetimeGenericEnum<'_, i32>: ({ Borrowed: number }) & { Owned?: never } | ({ Owned: number }) & { Borrowed?: never }
RenameWithWeirdCharsField: {
	"@odata.context": string,
}
RenameWithWeirdCharsVariant: { "@odata.context": string }
RenamedFieldKeys: {
	"": string,
	"a\"b": string,
	"a\\b": string,
	"line\nbreak": string,
	"line\u2028break": string,
	"line\u2029break": string,
}
RenamedVariantWithSkippedPayload: "a-b"
type_type::Type: never
ActualType: {
	a: GenericType<string>,
}
SpectaTypeOverride: {
	string_ident: string,
	u32_ident: number,
	path: string,
	tuple: [string, number],
}
ContainerTypeOverrideStruct: string
ContainerTypeOverrideEnum: string
ContainerTypeOverrideGeneric<Box<dyn Any>>: string
ContainerTypeOverrideToGeneric<i32>: number
ContainerTypeOverrideTuple: [string, number]
ContainerTypeOverrideTupleGeneric<i32>: [number, string]
InvalidToValidType: {
	cause: null,
}
TupleStruct: string
TupleStructWithRep: string
GenericTupleStruct<String>: string
BracedStruct: string
Struct: {
	t: "StructNew",
	a: string,
}
Struct2: {
	b: string,
}
Enum: { t: "A" } | { t: "B" }
Enum2: { t: "C" } | { t: "B" } | { t: "D"; enumField: null }
Enum3: { t: "A"; b: string }
StructRenameAllUppercase: {
	A: number,
	B: number,
}
RenameSerdeSpecialChar: {
	"a/b": number,
}
EnumRenameAllUppercase: "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS"
Recursive: {
	demo: Recursive,
}
RecursiveMapValue: {
	demo: { [key in string]: RecursiveMapValue },
}
RecursiveTransparent: RecursiveInline
RecursiveInEnum: { A: (RecursiveInEnum) }
NonOptional: string | null
OptionalOnNamedField: string | null
OptionalOnTransparentNamedField: {
	b: string | null,
}
OptionalInEnum: ({ A?: string | null }) & { B?: never; C?: never } | ({ B: {
	a: string | null,
} }) & { A?: never; C?: never } | ({ C: {
	a?: string | null,
} }) & { A?: never; B?: never }
UntaggedVariants: string | number | { id: string } | [string, boolean]
UntaggedVariantsWithoutValue: string | [number, string] | number
UntaggedVariantsWithDuplicateBranches: null | number
HashMap<String, ()>: { [key in string]: null }
Regular: { [key in string]: null }
HashMap<Infallible, ()>: { [key in never]: null }
HashMap<TransparentStruct, ()>: { [key in TransparentStruct]: null }
HashMap<UnitVariants, ()>: Partial<{ [key in UnitVariants]: null }>
HashMap<UntaggedVariantsKey, ()>: Partial<{ [key in UntaggedVariantsKey]: null }>
ValidMaybeValidKey: { [key in MaybeValidKey<string>]: null }
ValidMaybeValidKeyNested: { [key in MaybeValidKey<MaybeValidKey<string>>]: null }
MacroStruct: string
MacroStruct2: {
	demo: string,
}
MacroEnum: ({ Demo: string }) & { Demo2?: never } | ({ Demo2: {
	demo2: string,
} }) & { Demo?: never }
DeprecatedType: {
	a: number,
}
DeprecatedTypeWithMsg: {
	a: number,
}
DeprecatedTypeWithMsg2: {
	a: number,
}
DeprecatedFields: {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
}
DeprecatedTupleVariant: [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number]
DeprecatedEnumVariants: 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C"
CommentedStruct: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
}
CommentedEnum: 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ A: number }) & { B?: never } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ B: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
} }) & { A?: never }
SingleLineComment: 
/**
 *  Some single-line comment
 */
({ A: number }) & { B?: never } | 
/**
 *  Some single-line comment
 */
({ B: {
	/**
	 *  Some single-line comment
	 */
	a: number,
} }) & { A?: never }
NonGeneric: {
	a: number,
	b: boolean,
}
HalfGenericA<u8>: {
	a: number,
	b: boolean,
}
HalfGenericB<bool>: {
	a: number,
	b: boolean,
}
FullGeneric<u8, bool>: {
	a: number,
	b: boolean,
}
Another<bool>: {
	a: number,
	b: boolean,
}
MapA<u32>: { [key in string]: number }
MapB<u32>: { [key in number]: string }
MapC<u32>: { [key in string]: AGenericStruct<number> }
AGenericStruct<u32>: {
	field: {
	a: number,
	b: boolean,
},
}
A: {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
}
DoubleFlattened: {
	a: ToBeFlattened,
	b: ToBeFlattened,
}
FlattenedInner: (Inner)
BoxFlattened: (BoxedInner)
BoxInline: {
	c: {
		a: number,
	},
}
First: {
	a: string,
}
Second: {
	a: number,
}
Third: {
	b: { [key in string]: string },
	c: First,
} & (First)
Fourth: {
	a: First,
	b: {
		a: string,
	},
}
TagOnStructWithInline: {
	type: "TagOnStructWithInline",
	a: First,
	b: {
		a: string,
	},
}
Sixth: {
	a: First,
	b: First,
}
Seventh: {
	a: First,
	b: Second,
}
Eight: { A: string } | "B"
Ninth: { t: "A"; c: string } | { t: "B" } | { t: "C"; c: {
	a: string,
} } | { t: "D"; c: First }
Tenth: string | "B" | {
	a: string,
} | First
MyEnumTagged: { type: "Variant" } & (First)
MyEnumExternal: { Variant: (First) }
MyEnumAdjacent: { t: "Variant"; c: (First) }
MyEnumUntagged: (First)
EmptyStruct: Record<string, never>
EmptyStructWithTag: {
	a: "EmptyStructWithTag",
}
AdjacentlyTagged: { t: "A" } | { t: "B"; c: {
	id: string,
	method: string,
} } | { t: "C"; c: string }
LoadProjectEvent: { event: "started"; data: {
	projectName: string,
} } | { event: "progressTest"; data: {
	projectName: string,
	status: string,
	progress: number,
} } | { event: "finished"; data: {
	projectName: string,
} }
ExternallyTagged: "A" | ({ B: {
	id: string,
	method: string,
} }) & { C?: never } | ({ C: string }) & { B?: never }
Issue221External: ({ A: {
	a: string,
} }) & { B?: never } | ({ B: {
	b: string,
} }) & { A?: never }
InternallyTaggedD: { type: "A" } & ({ [key in string]: string })
InternallyTaggedE: { type: "A" }
InternallyTaggedF: { type: "A" }
InternallyTaggedH: { type: "A" }
InternallyTaggedL: { type: "A" } & ({ type: "A" } | { type: "B" })
InternallyTaggedM: { type: "A" }
StructWithAlias: {
	field: string,
}
StructWithMultipleAliases: {
	field: string,
}
StructWithAliasAndRename: {
	renamed_field: string,
}
EnumWithVariantAlias: "Variant" | "Other"
EnumWithMultipleVariantAliases: "Variant" | "Other"
EnumWithVariantAliasAndRename: "renamed_variant" | "Other"
InternallyTaggedWithAlias: { type: "A"; field: string } | { type: "B"; other: number }
AdjacentlyTaggedWithAlias: { type: "A"; data: {
	field: string,
} } | { type: "B"; data: {
	other: number,
} }
UntaggedWithAlias: ({ field: string }) & { other?: never } | ({ other: number }) & { field?: never }
Issue221UntaggedSafe: ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never }
Issue221UntaggedMixed: ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never } | ({ [key in string]: string })
EmptyEnum: never
EmptyEnumTagged: never
EmptyEnumTaggedWContent: never
EmptyEnumUntagged: never
SkipOnlyField: Record<string, never>
SkipField: {
	b: number,
}
SkipVariant: { A: string }
SkipUnnamedFieldInVariant: "A" | { B: [number] }
SkipNamedFieldInVariant: ({ A: Record<string, never> }) & { B?: never } | ({ B: {
	b: number,
} }) & { A?: never }
TransparentWithSkip: null
TransparentWithSkip2: string
TransparentWithSkip3: string
SkipVariant2: { tag: "A"; data: string }
SkipVariant3: { A: {
	a: string,
} }
SkipStructFields: {
	a: number,
}
SpectaSkipNonTypeField: {
	a: number,
}
FlattenA: {
	a: number,
	b: number,
}
FlattenB: {
	c: number,
} & (FlattenA)
FlattenC: {
	c: number,
} & (FlattenA)
FlattenD: {
	a: FlattenA,
	c: number,
}
FlattenE: {
	b: {
		c: number,
	} & (FlattenA),
	d: number,
}
FlattenF: {
	b: {
		c: number,
	} & (FlattenA),
	d: number,
}
FlattenG: {
	b: FlattenB,
	d: number,
}
TupleNested: [number[], [number[], number[]], [number[], number[], number[]]]
Generic1<()>: {
	value: null,
	values: null[],
}
GenericAutoBound<()>: {
	value: null,
	values: null[],
}
GenericAutoBound2<()>: {
	value: null,
	values: null[],
}
Container1: {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
}
Generic2<(), String, i32>: ({ A: null }) & { B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ B: [string, string, string] }) & { A?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ C: number[] }) & { A?: never; B?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ D: null[][][] }) & { A?: never; B?: never; C?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ E: {
	a: null,
	b: string,
	c: number,
} }) & { A?: never; B?: never; C?: never; D?: never; X?: never; Y?: never; Z?: never } | ({ X: number[] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; Y?: never; Z?: never } | ({ Y: number }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Z?: never } | ({ Z: number[][] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never }
GenericNewType1<()>: null[][]
GenericTuple<()>: [null, null[], null[][]]
GenericStruct2<()>: {
	a: null,
	b: [null, null],
	c: [null, [null, null]],
	d: [null, null, null],
	e: [([null, null]), ([null, null]), ([null, null])],
	f: null[],
	g: null[][],
	h: ([([null, null]), ([null, null]), ([null, null])])[],
}
InlineGenericNewtype<String>: string
InlineGenericNested<String>: [string, string[], [string, string], { [key in string]: string }, string | null, "Unit" | ({ Unnamed: string }) & { Named?: never } | ({ Named: {
	value: string,
} }) & { Unnamed?: never }]
InlineFlattenGenericsG<()>: {
	t: null,
}
InlineFlattenGenerics: {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
} & (InlineFlattenGenericsG<string>)
GenericParameterOrderPreserved: {
	pair: Pair<number, string>,
}
TestCollectionRegister: never
TestCollectionRegister: never
specta_typescript::Any: any
specta_typescript::Any<String>: any
specta_typescript::Unknown: unknown
specta_typescript::Unknown<String>: unknown
specta_typescript::Never: never
specta_typescript::Never<String>: never
